updated click listener outside in prevent nav from going off screen

--- a/wp-ig-components/scss/components/dropdowns/menus/dropdowns-menu-animated.scss
+++ b/wp-ig-components/scss/components/dropdowns/menus/dropdowns-menu-animated.scss
@@ -117,6 +117,7 @@
 }
 
 .dma--shaped-dropdown {
+  // dma--shaped-dropdown is targeted in js in prevent-nav-sub-menu-from-getting-off-screen.....
   & .dma__hiddent-content {
     padding-top: 10px;
     &:after {
@@ -144,11 +145,31 @@
   }
 }
 
+.dma--shaped-dropdown.dma--hover-off {
+  & .dma__list-item:hover {
+    & .dma__hiddent-content:after {
+      opacity: 0;
+    }
+  }
+
+  & .dma-item-active {
+    & .dma__hiddent-content:after {
+      opacity: 1 !important;
+    }
+  }
+}
+
 .dma--centered-dropdown {
   // .dma--centered-dropdown is also used in js file prevent-nav-sub-menu-from-getting-off-screen-left-and-right.js
   & .dma__list-item:hover .dma__hiddent-content {
     left: 50%;
     transform: translateX(-50%);
+  }
+  & .dma__list-item.dma-item-active {
+    & .dma__hiddent-content {
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 }
 
@@ -156,18 +177,45 @@
   animation: growDown 300ms ease-in-out forwards;
   transform-origin: top center;
 }
+
+.dma--centered-dropdown {
+  .dma-animation__scale-down {
+    animation: growDownCentered 300ms ease-in-out forwards;
+    transform-origin: top center;
+  }
+
+  .dma-animation__rotate-x {
+    animation: rotateMenuCentered 300ms ease-in-out forwards;
+    transform-origin: top center;
+  }
+  .dma-animation__translate-z {
+    animation: downOutCentered 300ms ease-in-out forwards;
+    transform-origin: center center;
+  }
+  .dma-animation__scale-up {
+    animation: growOutCentered 300ms ease-in-out forwards;
+    transform-origin: top left;
+  }
+  .dma-animation__rotate-y {
+    animation: rotateYCentered 300ms ease-in-out forwards;
+    transform-origin: top left;
+  }
+}
+
 .dma-animation__rotate-x {
-  animation: rotateMenu 400ms ease-in-out forwards;
+  animation: rotateMenu 300ms ease-in-out forwards;
   transform-origin: top center;
 }
 .dma-animation__translate-z {
   animation: downOut 300ms ease-in-out forwards;
   transform-origin: center center;
 }
+
 .dma-animation__scale-up {
   animation: growOut 300ms ease-in-out forwards;
   transform-origin: top center;
 }
+
 .dma-animation__rotate-y {
   animation: rotateY 300ms ease-in-out forwards;
   transform-origin: top center;
@@ -184,6 +232,20 @@
     transform: scaleY(1);
   }
 }
+@keyframes growDownCentered {
+  0% {
+    left: 50%;
+    transform: scaleY(0) translateX(-50%);
+  }
+  80% {
+    left: 50%;
+    transform: scaleY(1.1) translateX(-50%);
+  }
+  100% {
+    left: 50%;
+    transform: scaleY(1) translateX(-50%);
+  }
+}
 
 @keyframes rotateMenu {
   0% {
@@ -194,6 +256,20 @@
   }
   100% {
     transform: rotateX(0deg);
+  }
+}
+@keyframes rotateMenuCentered {
+  0% {
+    left: 50%;
+    transform: rotateX(-90deg) translateX(-50%);
+  }
+  70% {
+    left: 50%;
+    transform: rotateX(20deg) translateX(-50%);
+  }
+  100% {
+    left: 50%;
+    transform: rotateX(0deg) translateX(-50%);
   }
 }
 
@@ -208,6 +284,20 @@
     transform: translateZ(0px) transLateY(0px);
   }
 }
+@keyframes downOutCentered {
+  0% {
+    left: 50%;
+    transform: translateZ(200px) transLateY(40px) translateX(-50%);
+  }
+  80% {
+    left: 50%;
+    transform: translateZ(-10px) transLateY(0px) translateX(-50%);
+  }
+  100% {
+    left: 50%;
+    transform: translateZ(0px) transLateY(0px) translateX(-50%);
+  }
+}
 
 @keyframes growOut {
   0% {
@@ -220,6 +310,20 @@
     transform: scale(1);
   }
 }
+@keyframes growOutCentered {
+  0% {
+    left: 50%;
+    transform: scale(0) translateX(-50%);
+  }
+  80% {
+    left: 50%;
+    transform: scale(1.1) translateX(-50%);
+  }
+  100% {
+    left: 50%;
+    transform: scale(1) translateX(-50%);
+  }
+}
 
 @keyframes rotateY {
   0% {
@@ -230,6 +334,20 @@
   }
   100% {
     transform: rotateY(0);
+  }
+}
+@keyframes rotateYCentered {
+  0% {
+    left: 50%;
+    transform: rotateY(90deg) translateX(-50%);
+  }
+  80% {
+    left: 50%;
+    transform: rotateY(-10deg) translateX(-50%);
+  }
+  100% {
+    left: 50%;
+    transform: rotateY(0) translateX(-50%);
   }
 }
 
